k8s/apps/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector: { app: keycloak }
  ports:
    - name: http
      port: 8080
      targetPort: http
